--- a/SeekJob/package.json
+++ b/SeekJob/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "appwrite": "^15.0.0",
+    "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
