--- a/SeekJob/package.json
+++ b/SeekJob/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
     "react-sweetalert2": "^0.6.0"
   },
   "devDependencies": {
